--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-uglify": "^3.0.0"
-  },
-  "dependencies": {}
+    "rollup-plugin-uglify": "^3.0.0",
+    "is-touch-device": "^1.0.1"
+  }
 }
